--- a/docs/layouts/partials/docs/inject/head.html
+++ b/docs/layouts/partials/docs/inject/head.html
@@ -22,4 +22,8 @@ under the License.
 <link rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}/font-awesome/css/font-awesome.min.css">
 <script src="{{.Site.BaseURL}}/js/anchor.min.js"></script>
 <script src="{{.Site.BaseURL}}/js/flink.js"></script>
-<script src="{{.Site.BaseURL}}/js/redoc.standalone.js"></script>
+<!-- Only takes effect when the `redocPage` variable is true. -->
+{{ if .Params.redocPage }}
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval'; default-src 'self' data: blob: 'unsafe-inline' https://raw.githubusercontent.com/apache/paimon/master/paimon-open-api/;">
+    <script src="{{.Site.BaseURL}}/js/redoc.standalone.js"></script>
+{{ end }}
