--- a/docs/layouts/shortcodes/redoc_rest_catalog_api.html
+++ b/docs/layouts/shortcodes/redoc_rest_catalog_api.html
@@ -16,7 +16,7 @@ KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License.
 */}}{{/*
-Shortcode for redoc
+Shortcode for RestCatalog open-api rendered by Redoc
 */}}
 <div id="redoc-container"></div>
 <script>
