[rest] Fix content-security-policy violation on RestCatalog API yaml (#5355)

--- a/docs/layouts/shortcodes/redoc_rest_catalog_api.html
+++ b/docs/layouts/shortcodes/redoc_rest_catalog_api.html
@@ -1,10 +1,4 @@
----
-title: "REST API"
-layout: "custom-page"
-bookToc: false
-redocPage: true
----
-<!--
+{{/*
 Licensed to the Apache Software Foundation (ASF) under one
 or more contributor license agreements.  See the NOTICE file
 distributed with this work for additional information
@@ -13,7 +7,7 @@ to you under the Apache License, Version 2.0 (the
 "License"); you may not use this file except in compliance
 with the License.  You may obtain a copy of the License at
 
-  http://www.apache.org/licenses/LICENSE-2.0
+http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing,
 software distributed under the License is distributed on an
@@ -21,8 +15,12 @@ software distributed under the License is distributed on an
 KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License.
--->
-
-<body>
-    {{< redoc_rest_catalog_api >}}
-</body>
+*/}}{{/*
+Shortcode for RestCatalog open-api rendered by Redoc
+*/}}
+<div id="redoc-container"></div>
+<script>
+    Redoc.init('{{.Site.BaseURL}}/rest-catalog-open-api.yaml', {
+        disableSearch: true
+    }, document.getElementById('redoc-container'));
+</script>
