[rest] Redoc pages use UTF-8 charset

--- a/docs/layouts/partials/docs/inject/head.html
+++ b/docs/layouts/partials/docs/inject/head.html
@@ -24,5 +24,6 @@ under the License.
 <script src="{{.Site.BaseURL}}/js/flink.js"></script>
 <!-- Only takes effect when the `redocPage` variable is true. -->
 {{ if .Params.redocPage }}
+    <meta charset="UTF-8">
     <script src="{{.Site.BaseURL}}/js/redoc.standalone.js"></script>
 {{ end }}
